--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
   </style>
 </head>
-<body >
+<body onload="confirmHeadphones()>
   <!-- Page 1: Gift Box -->
   <div id="gift-box" onclick="openGift()">
     <h1>Come on open your present Jellyfishhh!!!</h1>
@@ -61,7 +61,7 @@
   <div id="unwrapping" style="display: none;" >
     <!-- Unwrapping animation content -->
     <!---<h2>Unwrapping your gift...</h2>--->
-    <img src="unwrapping-animation.png" alt="Unwrapping Animation" onclick="confirmHeadphones()">
+    <img src="unwrapping-animation.png" alt="Unwrapping Animation" ">
     <!-- Button to proceed to the next page -->
     <h2>Now Feel the song See whats inside the Box...</h2>
   </div>
