--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="unwrapping" style="display: none;" >
     <!-- Unwrapping animation content -->
     <!---<h2>Unwrapping your gift...</h2>--->
-    <img src="unwrapping-animation.png" alt="Unwrapping Animation" onload="confirmHeadphones()">
+    <img src="unwrapping-animation.png" alt="Unwrapping Animation" onclick="confirmHeadphones()">
     <!-- Button to proceed to the next page -->
     <h2>Now Feel the song See whats inside the Box...</h2>
   </div>
