--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     }
   </style>
 </head>
-<body >
+<body>
   
   <!-- Page 1: Gift Box -->
   <div id="gift-box" onclick="openGift()">
@@ -57,17 +57,13 @@
   </div>
 
   <!-- Page 2: Unwrapping Animation -->
-  <div id="unwrapping" style="display: none;" onclick="confirmHeadphones()" >
+  <div id="unwrapping" onclick="confirmHeadphones()" style="display: none;" >
     <!-- Unwrapping animation content -->
     <!---<h2>Unwrapping your gift...</h2>--->
-    <img src="unwrapping-animation.png" alt="Unwrapping Animation" >
+    <img src="unwrapping-animation.png" alt="Unwrapping Animation">
     <!-- Button to proceed to the next page -->
     <h2>Now Feel the song See whats inside the Box...</h2>
   </div>
-  <audio id="audio-player">
-      <source src="song.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
 
   <!-- Page 3: Playing Music -->
   <div id="music" style="display: none;">
@@ -80,6 +76,9 @@
     </iframe>
     <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFnMwnvmK8&#x2F;view?utm_content=DAFnMwnvmK8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
   </div>
+  <audio id="audio-player">
+    <source src="song.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
     // Function to open the gift box and proceed to the next page
@@ -94,7 +93,13 @@
     function confirmHeadphones() {
       document.getElementById("unwrapping").style.display = "none";
       document.getElementById("music").style.display = "block";
+      
     }
+    /*document.addEventListener("DOMContentLoaded", function() {
+      var audioPlayer = document.getElementById("audio-player");
+      audioPlayer.play();
+    });
+    */
   </script>
 </body>
 </html>
